# BYU-Computing-Tutorials

./: README.md
make_tutorial/: README.txt
make_tutorial/ex1/: compute.c  main.c
make_tutorial/ex1/makefiles/: mk.all.txt  mk1  mk2  mk3  mk4  mk5  mk6
make_tutorial/ex2/: CMakeLists.txt  input.h  main.c
make_tutorial/ex3/: CMakeLists.txt  main2.c
make_tutorial/ex3/compute/: CMakeLists.txt  compute.c  compute.h
make_tutorial/ex3/input/: CMakeLists.txt  input.c
rapidwright_example/: .gitignore  build.gradle
rapidwright_example/src/edu/byu/ee/ccl/: HelloWorld.java
vivado-sdk-hls/: vivado_tutorial.tex
